--- a/FoodTicTacToe/package.json
+++ b/FoodTicTacToe/package.json
@@ -12,14 +12,17 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
+        "@vue/compiler-sfc": "^3.0.11",
         "alpinejs": "^2.7.3",
         "axios": "^0.21",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.3.0",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1"
+        "tailwindcss": "^2.0.1",
+        "vue": "^3.0.11",
+        "vue-loader": "^16.2.0"
     }
 }
