--- a/FoodTicTacToe/package.json
+++ b/FoodTicTacToe/package.json
@@ -14,7 +14,6 @@
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.11",
         "alpinejs": "^2.7.3",
-        "axios": "^0.21",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.0-beta.17",
@@ -26,6 +25,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
+        "vue-axios": "^3.2.4",
         "vue-sweetalert2": "^4.3.1"
     }
 }
